--- a/estilos.css
+++ b/estilos.css
@@ -1,28 +1,79 @@
-.barranav{
+.barralateral {
+    height: 100%;
+    width: 250px;
+    position: absolute;
+    left: 0;
+    top: 0;
+    padding-top: 40px;
+    background-color:brown;
+    }
     
-    color: aliceblue;
-    padding: 10px 25px; 
+    .barralateral a {
+    padding: 8px;
+    font-size: 24px;
+    display: block;
     text-decoration: none;
-}
+    color: aliceblue;
+    margin-left: 40px;
+    }
+    
+    .barralateral a:hover {
+    cursor: pointer;
+    opacity: .7;
+    font-size: 30px;
 
-.barranav:hover{
-    background: rgb(34, 56, 34);
-    color: rgb(42, 157, 165);
-}
+    }
+    
+    .encabezado {
+    margin-left: 50px;
+    background: rgb(243, 213, 213);
+    padding-top: 80px;
+    }
 
-nav{
-   background: brown;
-   
-   display: flex;
-    justify-content: space-around;
-}
+
 .imgperfil{
     border-radius: 60%;
       }
 .nombre{
-    margin-bottom: 5px; 
-    padding: 20px 30px;
+    margin-bottom: -40px;
+    margin-left: 220px;
+    font-family: 'Saira Extra Condensed', sans-serif;
+    font-size: 100px;
+    margin-top: -110px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    
+    
+    
 }      
 .direccion{
     margin-top: 5px;
+    padding: 1px 6px;
+    margin-left: 200px;
+    font-family: 'Saira Extra Condensed', sans-serif;
+    font-size: 25px;
+}
+.presentacion{
+    font-family: 'Saira Extra Condensed', sans-serif;
+    font-size: 30px;
+    margin-left: 250px;
+    ;
+}
+.rrss{
+    display: flex;
+    align-items: center;
+    padding-top: 30px;
+ 
+}
+ 
+.textogral {
+    font-family: 'Saira Extra Condensed', sans-serif;
+    font-size: 30px;
+    margin-left: 250px;
+
+}
+.linea2 {
+    margin-left: 350px;
+    
+
 }
