--- a/portfolio.css
+++ b/portfolio.css
@@ -34,4 +34,46 @@ body{
 
 .musica{
     padding-left: 150px;
+
+}
+
+.full-img{
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0,0, 0.9);
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    z-index: 99;
+}
+.full-img span{
+    position: absolute;
+    top: 5%;
+    right: 5%;
+    font-size: 30px;
+    color: #fff;
+    cursor: pointer;
+}
+.full-img img{
+    width: 90%;
+    max-width: 600px;
+}
+
+@media screen and (max-width:600px){
+    .TITULOPORTFOLIO{
+        color: aliceblue;
+        text-align: center;
+        font-size: 30px;
+
+}
+.imagenesgral{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-row: 150px;
+    gap: 10px;
+
+}
 }
